--- a/public/index.html
+++ b/public/index.html
@@ -5,32 +5,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- <script src="./js/app.js"></script> -->
+
     <title>Cadastro para InscriVíve</title>
 </head>
 
 <body>
 
-    <h1>Inscreva-se na InscriVíve</h1>
-    <div id="aviones-container"></div>
+    <h1 class="inscricao">Inscreva-se na InscriVível</h1>
 
-    <form action="../rota.php?acao=cadastrarCli" method="post">
+    <div class="container">
+        <form action="../rota.php?acao=cadastrarCli" method="post">
+            <div class="input-group">
+                <i class="fas fa-user"></i>
+                <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
+            </div>
+            <div class="input-group">
+                <i class="fas fa-envelope"></i>
+                <input type="email" name="email" placeholder="E-mail" required>
+            </div>
 
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
-        <br><br>
+            <button type="submit" class="btn">Inscrever</button>
+        </form>
+        <div class="cancel-link">
+            <a href="../views/cancelar.html">Cancelar inscrição</a>
+        </div>
+    </div>
 
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" placeholder="Seu e-mail" required>
-        <br><br>
 
-        <button type="submit">Inscrever</button>
-    </form>
 
-    <br>
-    <a href="../views/cancelar.html">Cancelar inscrição</a>
-    <script src="./js/app.js" defer></script>
 
+    <!-- O script deve ser carregado após o HTML -->
+    <!-- <script src="./js/app.js" defer></script> -->
 </body>
+
 
 </html>
