--- a/public/index.html
+++ b/public/index.html
@@ -14,31 +14,34 @@
 
 <body>
 
-    <h1 class="inscricao">Inscreva-se na InscriVível</h1>
-
-    <div class="container">
-        <form action="../rota.php?acao=cadastrarCli" method="post">
-            <div class="input-group">
-                <i class="fas fa-user"></i>
-                <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
+    <div class="main-container">
+        <div class="inscricao">
+            <h1>Inscreva-se na InscriVível</h1>
+        </div>
+        <div class="container">
+            <form action="../rota.php?acao=cadastrarCli" method="post">
+                <div class="input-group">
+                    <i class="fas fa-user"></i>
+                    <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
+                </div>
+                <div class="input-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" id="email" name="email" placeholder="E-mail" required>
+                </div>
+                <button type="submit" class="btn">Inscrever</button>
+            </form>
+            <div class="cancel-link">
+                <a href="../views/cancelar.html">Cancelar inscrição</a>
             </div>
-            <div class="input-group">
-                <i class="fas fa-envelope"></i>
-                <input type="email" name="email" placeholder="E-mail" required>
-            </div>
-
-            <button type="submit" class="btn">Inscrever</button>
-        </form>
-        <div class="cancel-link">
-            <a href="../views/cancelar.html">Cancelar inscrição</a>
         </div>
     </div>
 
 
+    <div id="container"></div> <!-- Certifique-se de que o contêiner existe -->
 
 
     <!-- O script deve ser carregado após o HTML -->
-    <!-- <script src="./js/app.js" defer></script> -->
+    <script src="./js/app.js" defer></script>
 </body>
 
 
